Fixed preview button hidden behind menu

--- a/_sass/smtk.scss
+++ b/_sass/smtk.scss
@@ -175,6 +175,7 @@ a .usa-icon {
   height: 100%;
   background: rgba(0, 0, 0, .7);
   text-align: center;
+  z-index: 999999;
 }
 .smtk-lightbox__controls {
   text-align: right;
